added service page for bride and party makeup

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,18 +21,38 @@
      <section class="collapse navbar-collapse" id="myTogglerNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="./service.html" class="nav-link">Service</a></li>
-          <li class="nav-item"><a href="./register.html" class="nav-link">Register</a></li>
-          <li class="nav-item"><a href="./gallery.html" class="nav-link">Gallery</a></li>          
-          <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
-                  </ul>
+          <!-- <li class="nav-item"><a href="service.html" class="nav-link">Service</a></li> -->
+          <li class="dropdown">
+          <a href=# class="dropdown-toggle text-light service" data-toggle="dropdown">Service <span class="caret"></span></a>
+         
+          <ul class="dropdown-menu sub-menu">
+            <li class="text-light"><a href="bride.html">Bride & Party Makeup </a><li>
+              <li class="text-light"><a href="model.html">Models Makeup </a></li>
+              <li class="text-light"><a href="professional.html">Professional Makeup</a></li>
+              <li class="text-light"><a href="self.html">Self Makeup</a></li>
+            </ul>
+          
+          </li>
+          <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
     </section>
     </div>
   </nav>
   </header>
     <!-- END nav -->
+    <!--  
+    <div class="hero-wrap" style="background-image: url('images/bride1.jpg');" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
 
-<!-- carousel start -->
+      </div>
+        </div>
+      </div>
+    </div>
+        -->
+
 <div id="mycarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
@@ -128,9 +148,9 @@
           <div class="col-md-12 text-center">
               <h2 class="footer-title">Contact</h2>
               <div class="location">
-	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text">: Nadipur Ward no. 3, Pokhara</span><br>
+	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 3, Pokhara</span><br>
 	                <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
-                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swiki@gmail.com</span></a>  
+                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
                   </div>
           </div>
         </div>
