added service pages for modal and class

--- a/src/main/resources/public/bride.html
+++ b/src/main/resources/public/bride.html
@@ -88,7 +88,7 @@
 <div id= "container1">
 <div id="main1">
     <header>
-        <h2>Bridal & Party Makeup</h2>
+        <h2>BRIDAL & PARTY MAKEUP</h2>
         <p>We specialize in Bridal makeup on their special day as well as make up for parties so that even
           the guest looks pretty.
           </p>
@@ -96,18 +96,18 @@
       <div id= "sub-main">
           <img class="right" src = "images/bride1s.jpg"/>
           <div class= "media-body">
-            <h4 class="layout-title">Bridal Makeup</h4>
+            <h4 class="layout-title">BRIDAL MAKEUP</h4>
           <p class="layout-text">Wedding ceremony is always special to a bride. We make sure she looks prettiest of all. We take care of every
             little details in her makeup and hair style.
-            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#mymodal">Click here for Package and Pricing</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#mymodalBride">Click here for Package and Pricing</button>
           </p>
           </div>
-          <div class="modal" id="mymodal">
+          <div class="modal" id="mymodalBride">
             <div class ="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header modal-section-header">
-                   <!-- <button class = "close" type="button" data-dismiss="modal">x</button> -->
-                    <h2 class="modal-title modal-section-title">Packages</h2>
+                      <h2 class="modal-title modal-section-title">Packages</h2>
+                   <button class = "close" type="button" data-dismiss="modal">x</button>  
                     </div>
                     <div class="model-body modal-section-text">
                       <p>
@@ -150,11 +150,27 @@
         <div id= "sub-main">
             <img class="right" src = "images/party5s.jpg"/>
             <div class= "media-body">
-              <h4 class="layout-title">Bridal Makeup</h4>
+              <h4 class="layout-title">PARTY MAKEUP</h4>
             <p class="layout-text">Everyone want to look beautiful while they are with someone and especially when its party time you have to look
               better than others. Thats where we come in. In any kind of parties we make you the prettiest person and help to boost your confidence.
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#mymodalParty">Click here for Package and Pricing</button>
             </p>
             </div>
+            <div class="modal" id="mymodalParty">
+                <div class ="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header modal-section-header">
+                          <h2 class="modal-title modal-section-title">Packages</h2>
+                       <button class = "close" type="button" data-dismiss="modal">x</button>  
+                        </div>
+                        <div class="model-body modal-section-text">
+                          <p> Simple makeup: Rs 1500 (only makeup) </p> 
+                          <p>  Glamourous Makeup : Rs 2500 (only makeup)</p>
+                           <p> *Hair do charge : 1000</p>   
+                        </div>
+                      </div>
+                    </div>  
+                </div>
           </div>
   </div>
   </div>
