--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -34,8 +34,8 @@
           
           </li>
           <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </section>
     </div>
