backend plus beautify frontend

--- a/src/main/resources/public/model.html
+++ b/src/main/resources/public/model.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Makeup Obsession</title>
     <meta charset="utf-8">
@@ -20,22 +20,22 @@
       <a class="navbar-brand" href="index.html"><i class="fas fa-cube"></i>The Makeup Obsession</a>
      <section class="collapse navbar-collapse" id="myTogglerNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <!-- <li class="nav-item"><a href="service.html" class="nav-link">Service</a></li> -->
           <li class="dropdown">
           <a href=# class="dropdown-toggle text-light service" data-toggle="dropdown">Service <span class="caret"></span></a>
          
           <ul class="dropdown-menu sub-menu">
             <li class="text-light"><a href="bride.html">Bride & Party Makeup </a><li>
-              <li class="text-light"><a href="model.html">Models Makeup </a></li>
+              <li class="text-light active"><a href="model.html">Models Makeup </a></li>
               <li class="text-light"><a href="professional.html">Professional Makeup</a></li>
               <li class="text-light"><a href="self.html">Self Makeup</a></li>
             </ul>
           
           </li>
           <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </section>
     </div>
