--- a/src/main/resources/public/professional.html
+++ b/src/main/resources/public/professional.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
   <head>
     <title>Makeup Obsession</title>
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
           <!-- <li class="nav-item"><a href="service.html" class="nav-link">Service</a></li> -->
           <li class="dropdown">
-          <a href=# class="dropdown-toggle text-light" data-toggle="dropdown">Service <span class="caret"></span></a>
+          <a href=# class="dropdown-toggle text-light service" data-toggle="dropdown">Service <span class="caret"></span></a>
          
           <ul class="dropdown-menu sub-menu">
             <li class="text-light"><a href="bride.html">Bride & Party Makeup </a><li>
@@ -34,8 +34,8 @@
           
           </li>
           <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
     </section>
     </div>
@@ -61,13 +61,31 @@
                       <div class ="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header modal-section-header">
-                                <h2 class="modal-title modal-section-title">Packages</h2>
+                                <h2 class="modal-title modal-section-title">Packages & Price</h2>
                              <button class = "close" type="button" data-dismiss="modal">x</button>  
                               </div>
                               <div class="model-body modal-section-text">
-                                <p> Simple makeup: Rs 1500 (only makeup) </p> 
-                                <p>  Glamourous Makeup : Rs 2500 (only makeup)</p>
-                                 <p> *Hair do charge : 1000</p>   
+                                  <p>Professional Makeup Class:</p>
+<p>COURSE INCLUDES:</p>
+<p>Part 1: 
+Skin analysis and color wheel</p>
+<p>Part 2:
+Basic application (base, concealing, contouring,  highlighting and blush)</p>
+<p>Part 3:
+Eye makeup Application (day to night)
+Eyebrow shape perfecting
+Lips</p>
+<p>Part 4: 
+Bridal makeup and finishing touch up </p>
+<p>Final phase : 
+Professional photoshoot.   </p>
+<p>*certificate will be provided.  </p>
+<p>*All the required cosmetics and brsuh will be provided by the studio till training period.</p>
+<br>
+<h3>Price & Duration:</h3>
+<p>Professional makeup class 25000</p>
+<p>Course due: 1 month </p>
+<p>Time : 4 hrs per day</p>
                               </div>
                             </div>
                           </div>  
