--- a/src/main/resources/public/about.html
+++ b/src/main/resources/public/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno|Srisakdi" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -44,9 +45,9 @@
    <div id= "container1">
     <div id="main1">
         <header>
-                <h2>THE MAKEUP OBSESSION</h2>
+                <h2>The MakeUp Obsession</h2>
           </header>     
-            <div id= "sub-main">
+            <div id= "sub-main" class = "about-background">
                 <div class= "media-body">
                   <h4 class="layout-title"></h4>
                 <p class="layout-text">Established in 2015. The Makeup Obsession is a team of skilled, experienced and passionate makeup and hair stylists 
@@ -60,10 +61,10 @@
       
       <div id="main1">
         <header>
-                <h2>ARTIST</h2>
+                <h2>MakeUp Artist</h2>
           </header>     
             <div id= "sub-main">
-            <img class="right" src = "images/artist_s.jpg"/>
+            <img class="right-about" src = "images/artist_s.jpg"/>
                 <div class= "media-body">
                   <h4 class="layout-title"></h4>
                 <p class="layout-text">
@@ -71,33 +72,34 @@
                <br>
 My passion for makeup started since i have grown up seeing my mom doing her makeup. Her constant support and my passion for makeup helped me to follow my dream. Long way to go but i haven't stopped following my dream. 
 <br>
-For me, makeup is an art to express yourself. It helps to escalate your confidence and make you look presentable in front of many by not applying much on your face. It brings smile on my face when i make other feel beautiful. My desire is to help a woman's inner beauty shine on outside. For me my reward is an appreciation of my work by my clients. I believe in "Looking good is your best revenge. " 
+For me, makeup is an art to express yourself. It helps to escalate your confidence and make you look presentable in front of others by further enhancing your beauty. It brings smile on my face when i make other feel beautiful. My desire is to help a woman's inner beauty shine on outside. For me my reward is an appreciation of my work by my clients. I believe in "Looking good is your best revenge. " 
 <br>
 I have been giving classes like self makeup class and professional makeup class throughout Nepal. And i also do bridal makeup, party makeup and editorial makeup. 
 <br>
-Last but not the least, there is a sexy glamourous woman in all of us, try to indulge it.
+Last but not the least, there is a sexy glamorous woman in all of us, try to indulge it.
                 </p>
                 </div>
               </div>
       </div>
       </div>
   
-  <footer>
+<footer>
       <div class="container">
         
           <div class="row">
           <div class="col-md-12 text-center">
               <h2 class="footer-title">Contact</h2>
               <div class="location">
-	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text">: Nadipur Ward no. 3, Pokhara</span><br>
+	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 1, Pokhara</span><br>
 	                <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
-                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swiki@gmail.com</span></a>  
+                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
                   </div>
           </div>
         </div>
         <div class="row">  
             <div class = "col-md-12 text-center"> 
-                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="#"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="https://www.facebook.com/makeupbyswiki/"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-instagram text-light align-items-center"><a href="https://www.instagram.com/swikishrestha/?hl=en"><i class="fa fa-instagram fa-lg"></i></a></span>
                   <span class = "btn btn-social-icon btn-twitter text-light align-items-center"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></span>      
             </div>
             </div>
