--- a/src/main/resources/public/model.html
+++ b/src/main/resources/public/model.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno|Srisakdi" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -45,7 +46,7 @@
   <div id= "container1">
     <div id="main1">
         <header>
-                <h2>MODEL'S MAKEUP FOR PHOTOSHOOT</h2>
+                <h2>Model's MakeUp For Photoshoot</h2>
           </header>     
             <div id= "sub-main">
                 <img class="right" src = "images/model1s.jpg"/>
@@ -61,31 +62,35 @@
       </div>
       </div>
 
-  <footer>
-    <div class="container"> 
+<footer>
+      <div class="container">
+        
+          <div class="row">
+          <div class="col-md-12 text-center">
+              <h2 class="footer-title">Contact</h2>
+              <div class="location">
+	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 1, Pokhara</span><br>
+	                <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
+                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
+                  </div>
+          </div>
+        </div>
+        <div class="row">  
+            <div class = "col-md-12 text-center"> 
+                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="https://www.facebook.com/makeupbyswiki/"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-instagram text-light align-items-center"><a href="https://www.instagram.com/swikishrestha/?hl=en"><i class="fa fa-instagram fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-twitter text-light align-items-center"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></span>      
+            </div>
+            </div>
         <div class="row">
-        <div class="col-md-12 text-center">
-            <h2 class="footer-title">Contact</h2>
-            <div class="location">
-                  <span> <i class="fas fa-map-marker-alt"></i></span><span class="text">: Nadipur Ward no. 3, Pokhara</span><br>
-                  <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
-                <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
-                </div>
+          <div class="col-md-12 text-center">       
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
+          </div>
         </div>
       </div>
-      <div class="row">  
-          <div class = "col-md-12 text-center"> 
-                <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="#"> <i class="fa fa-facebook fa-lg"></i></a></span>
-                <span class = "btn btn-social-icon btn-twitter text-light align-items-center"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></span>      
-          </div>
-          </div>
-      <div class="row">
-        <div class="col-md-12 text-center">       
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
+  
+  
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  
