--- a/src/main/resources/public/professional.html
+++ b/src/main/resources/public/professional.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans|Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Italianno|Srisakdi" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -45,7 +46,7 @@
   <div id= "container1">
       <div id="main1">
           <header>
-                  <h2>PROFESSIONAL MAKEUP CLASS</h2>
+                  <h2>Professional Makeup Class</h2>
             </header>     
               <div id= "sub-main">
                   <img class="right" src = "images/class7s.jpg"/>
@@ -94,22 +95,23 @@ Professional photoshoot.   </p>
         </div>
         </div>
 
-    <footer>
+ <footer>
       <div class="container">
         
           <div class="row">
           <div class="col-md-12 text-center">
               <h2 class="footer-title">Contact</h2>
               <div class="location">
-	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text">: Nadipur Ward no. 3, Pokhara</span><br>
+	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 1, Pokhara</span><br>
 	                <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
-                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swiki@gmail.com</span></a>  
+                  <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
                   </div>
           </div>
         </div>
         <div class="row">  
             <div class = "col-md-12 text-center"> 
-                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="#"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="https://www.facebook.com/makeupbyswiki/"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-instagram text-light align-items-center"><a href="https://www.instagram.com/swikishrestha/?hl=en"><i class="fa fa-instagram fa-lg"></i></a></span>
                   <span class = "btn btn-social-icon btn-twitter text-light align-items-center"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></span>      
             </div>
             </div>
